# UICourseAI

./: .gitignore  CS_582_from_api.csv  README.md  index.html  pyproject.toml  uic_grades_sample.csv
assets/: index-BZpmyIFi.js  index-DzEbTTzr.css  index-nRl2nTmr.js
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
project/: .gitignore  pyproject.toml  requirements.txt
project/api/: main.py
project/chatbot/: actions.py  intent.py  intent_schema.py  llm_intent.py  main_cli.py  nlu_rules.py
project/config/: term.yaml
project/data/analytics/: instructor_summary.csv  instructor_summary.parquet
project/data/raw/: RadGridExport.csv
project/data/warehouse/: grades_master.parquet
project/demo/: demo_scripts.md  known_limitations.md  sample_prompts.txt
project/scripts/: build_instructor_summary.py  chatbot_mvp.py  debug_warehouse.py  fetch_uicgrades_single.py  plot_grade_pie.py  plot_one.py  plot_patterns.py  query_easiest_prof.py  rebuild_warehouse_from_raw.py  test.py  verify_csv.py  view_patterns.py
project/tests/: test_intent.py  test_rank_dummy.py
project/uicourseai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
uicourseai.egg-info/: PKG-INFO  SOURCES.txt
